--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vishal Wamanrao Patre — QA Engineer</title>
-  <meta name="description" content="Resume website for Vishal Wamanrao Patre — Quality Assurance Engineer specialized in ADA, load/performance testing, automation, and API validation." />
+
+  <!-- Basic SEO -->
+  <meta name="description" content="QA Engineer with 6+ years in Accessibility (WCAG), Performance (JMeter/LoadRunner), Automation (Selenium/Python), API testing, CI/CD." />
   <meta name="theme-color" content="#0ea5e9" />
+
+  <!-- Fonts -->
   https://fonts.googleapis.com
   https://fonts.gstatic.com
   https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Poppins:wght@400;600;800&display=swap
+
+  <!-- Styles -->
   styles.css
+
+  <!-- Favicon & Social -->
   assets/favicon.svg
   <meta property="og:title" content="Vishal Wamanrao Patre — QA Engineer" />
-  <meta property="og:description" content="6+ years in QA: Accessibility (WCAG), Performance (JMeter/LoadRunner), Automation (Selenium/Python), API testing, CI/CD (Jenkins)." />
+  <meta property="og:description" content="QA Engineer focused on Accessibility, Performance, Automation, APIs, and CI/CD." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="assets/og-cover.png" />
-  script.js</script>
+
+  <!-- Structured data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -26,22 +35,25 @@
     "telephone": "+91-7972197816",
     "address": {"@type": "PostalAddress", "addressLocality": "Pune", "addressCountry": "IN"},
     "alumniOf": [{"@type": "CollegeOrUniversity", "name": "DY Patil University"}],
-    "knowsAbout": ["Selenium","Python","ADA/WCAG","JMeter","LoadRunner","API Testing","Azure DevOps","Jira","Jenkins","MS SQL","GitHub"],
-    "url": ""
+    "knowsAbout": ["Selenium","Python","ADA/WCAG","JMeter","LoadRunner","API Testing","Azure DevOps","Jira","Jenkins","MS SQL","GitHub"]
   }
   </script>
+
+  <!-- JS -->
+  script.js</script>
 </head>
 <body>
 
   <!-- Decorative gradient backdrop -->
-  <div class="bg-gradient"></div>
+  <div class="bg-gradient" aria-hidden="true"></div>
 
+  <!-- Header / Nav -->
   <header class="site-header container">
     #homeVP</a>
-    <nav class="nav">
-      <button class="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">🌙</button>
-      <button class="menu-toggle" aria-label="Open menu">☰</button>
-      <ul class="nav-links">
+    <nav class="nav" aria-label="Primary">
+      <button class="theme-toggle" aria-label="Toggle theme" title="Toggle theme">🌗</button>
+      <button class="menu-toggle" aria-controls="primary-menu" aria-expanded="false" aria-label="Toggle menu">☰</button>
+      <ul class="nav-links" id="primary-menu">
         <li>#aboutAbout</a></li>
         <li>#skillsSkills</a></li>
         <li>#experienceExperience</a></li>
@@ -52,6 +64,7 @@
     </nav>
   </header>
 
+  <!-- Main -->
   <main>
     <!-- Hero -->
     <section id="home" class="hero container reveal">
@@ -60,7 +73,10 @@
           <span class="eyebrow">Quality Assurance Engineer</span>
           Vishal <span class="accent">Wamanrao</span> Patre
         </h1>
-        <p class="lead">6+ years in QA across financial services — Accessibility (WCAG), Performance (JMeter/LoadRunner), Automation (Selenium/Python), API testing, CI/CD integration.</p>
+        <p class="lead">
+          6+ years in QA — Accessibility (WCAG), Performance (JMeter/LoadRunner),
+          Automation (Selenium/Python), API testing, CI/CD integration.
+        </p>
         <div class="cta">
           #contactHire Me</a>
           assets/Vishal_Patre_QA_Resume.pdfDownload PDF</a>
@@ -72,7 +88,8 @@
           <span>📍 Pune, India</span>
         </div>
       </div>
-      <div class="hero-card glass">
+
+      <aside class="hero-card glass" aria-label="Key Highlights">
         <ul class="highlights">
           <li>ADA Accessibility (WCAG)</li>
           <li>Load & Performance (JMeter, LoadRunner)</li>
@@ -80,14 +97,17 @@
           <li>API Testing (Postman, REST Assured)</li>
           <li>CI/CD (Jenkins, Git)</li>
         </ul>
-      </div>
+      </aside>
     </section>
 
     <!-- About -->
     <section id="about" class="section container reveal">
       <h2 class="section-title">About</h2>
       <p>
-        Quality Assurance Engineer with 6+ years of experience in software testing, ADA compliance testing, load/performance testing, and automation within the financial services domain. Skilled in manual and automated testing, API validation, and CI/CD integration. Holds an MBA in Artificial Intelligence & Machine Learning from DY Patil University, with foundational knowledge in Python, Data Analysis, and Machine Learning concepts, enabling data-driven testing and process optimization.
+        Quality Assurance Engineer with 6+ years of experience in software testing, ADA compliance testing,
+        load/performance testing, and automation within the financial services domain. Skilled in manual and automated
+        testing, API validation, and CI/CD integration. Holds an MBA in Artificial Intelligence & Machine Learning from DY
+        Patil University, enabling data-driven testing and process optimization.
       </p>
     </section>
 
@@ -123,13 +143,13 @@
           <span>Pune, India · Mar 2023 – Present</span>
         </header>
         <ul class="list">
-          <li>Developed and executed manual and automated test cases for web and API applications ensuring compliance with business and security requirements.</li>
+          <li>Developed and executed manual and automated test cases for web and API applications ensuring compliance.</li>
           <li>Performed ADA accessibility testing using WCAG guidelines for web applications.</li>
-          <li>Conducted load and performance testing using JMeter, validating system scalability and reliability.</li>
-          <li>Collaborated with developers and product owners in Agile/Scrum environment to identify and resolve issues early.</li>
-          <li>Managed defects and tasks using Azure DevOps (ADO) and Jira for streamlined tracking and reporting.</li>
-          <li>Integrated automated tests into CI/CD pipelines using Jenkins, improving release efficiency.</li>
-          <li>Utilized Python scripts for data validation and analysis to enhance test coverage.</li>
+          <li>Conducted load & performance testing using JMeter.</li>
+          <li>Collaborated in Agile/Scrum to resolve issues early.</li>
+          <li>Managed defects using Azure DevOps (ADO) and Jira.</li>
+          <li>Integrated automated tests into CI/CD using Jenkins.</li>
+          <li>Used Python scripts for data validation and analysis.</li>
         </ul>
       </article>
 
@@ -140,10 +160,10 @@
         </header>
         <ul class="list">
           <li>Designed and executed functional and regression test cases for enterprise applications.</li>
-          <li>Automated repetitive test scenarios using Selenium WebDriver, improving coverage and reducing manual effort.</li>
-          <li>Performed API testing and validated data using MS SQL queries.</li>
-          <li>Conducted performance testing using LoadRunner for critical modules to ensure stability under load.</li>
-          <li>Contributed to Agile ceremonies including sprint planning and retrospectives.</li>
+          <li>Automated scenarios using Selenium WebDriver.</li>
+          <li>API testing and data validation with MS SQL.</li>
+          <li>LoadRunner performance testing on critical modules.</li>
+          <li>Participated in Agile ceremonies.</li>
         </ul>
       </article>
     </section>
@@ -162,7 +182,7 @@
         </article>
         <article class="card">
           <h3>Load Testing Suite</h3>
-          <p>Designed JMeter scripts for performance benchmarking of applications.</p>
+          <p>Designed JMeter scripts for performance benchmarking.</p>
         </article>
         <article class="card">
           <h3>Python Data Analysis</h3>
@@ -174,7 +194,7 @@
         </article>
         <article class="card">
           <h3>Tata Group Data Analytics Job Simulation (Forage)</h3>
-          <p>AI-powered data analytics and strategy for Financial Services at Tata iQ, Dec 2025.</p>
+          <p>AI-powered data analytics & strategy for Financial Services, Dec 2025.</p>
         </article>
       </div>
     </section>
@@ -231,3 +251,4 @@
 
 </body>
 </html>
+``
