--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           https://github.com/GitHub</a>
         </div>
         <div class="contacts">
-          mailto:vishpatre57@zohomail.in📧 vishpatre57@zohomail.in</a>
+          <ailto:vishpatre57@zohomail.in📧 vishpatre57@zohomail.in</a>
           <span>📱 +91-7972197816</span>
           <span>📍 Pune, India</span>
         </div>
@@ -251,4 +251,3 @@
 
 </body>
 </html>
-``
