--- a/index.html
+++ b/index.html
@@ -1,253 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vishal Wamanrao Patre — QA Engineer</title>
-
-  <!-- Basic SEO -->
-  <meta name="description" content="QA Engineer with 6+ years in Accessibility (WCAG), Performance (JMeter/LoadRunner), Automation (Selenium/Python), API testing, CI/CD." />
-  <meta name="theme-color" content="#0ea5e9" />
-
-  <!-- Fonts -->
-  https://fonts.googleapis.com
-  https://fonts.gstatic.com
-  https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Poppins:wght@400;600;800&display=swap
-
-  <!-- Styles -->
-  styles.css
-
-  <!-- Favicon & Social -->
-  assets/favicon.svg
-  <meta property="og:title" content="Vishal Wamanrao Patre — QA Engineer" />
-  <meta property="og:description" content="QA Engineer focused on Accessibility, Performance, Automation, APIs, and CI/CD." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/og-cover.png" />
-
-  <!-- Structured data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Vishal Wamanrao Patre",
-    "jobTitle": "Quality Assurance Engineer",
-    "email": "mailto:vishpatre57@zohomail.in",
-    "telephone": "+91-7972197816",
-    "address": {"@type": "PostalAddress", "addressLocality": "Pune", "addressCountry": "IN"},
-    "alumniOf": [{"@type": "CollegeOrUniversity", "name": "DY Patil University"}],
-    "knowsAbout": ["Selenium","Python","ADA/WCAG","JMeter","LoadRunner","API Testing","Azure DevOps","Jira","Jenkins","MS SQL","GitHub"]
-  }
-  </script>
-
-  <!-- JS -->
-  script.js</script>
+  <title>Vishal Patre — QA Engineer</title>
+  <meta name="description" content="Portfolio website of Vishal Wamanrao Patre, Quality Assurance Engineer in Pune. ADA, Load Testing, Automation, API Testing, CI/CD." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-  <!-- Decorative gradient backdrop -->
-  <div class="bg-gradient" aria-hidden="true"></div>
-
-  <!-- Header / Nav -->
-  <header class="site-header container">
-    #homeVP</a>
-    <nav class="nav" aria-label="Primary">
-      <button class="theme-toggle" aria-label="Toggle theme" title="Toggle theme">🌗</button>
-      <button class="menu-toggle" aria-controls="primary-menu" aria-expanded="false" aria-label="Toggle menu">☰</button>
-      <ul class="nav-links" id="primary-menu">
-        <li>#aboutAbout</a></li>
-        <li>#skillsSkills</a></li>
-        <li>#experienceExperience</a></li>
-        <li>#projectsProjects</a></li>
-        <li>#educationEducation</a></li>
-        <li>#contactContact</a></li>
+  <header class="site-header">
+    <nav class="nav">
+      <a class="logo" href="#home">VP</a>
+      <button class="theme-toggle" aria-label="Toggle theme" title="Toggle theme">
+        <span>🌙</span>
+      </button>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+    <section class="hero" id="home">
+      <div class="hero-content">
+        <h1><span class="accent">Vishal</span> Wamanrao Patre</h1>
+        <p class="subtitle">Quality Assurance Engineer · ADA & Performance · Automation · API Testing</p>
+        <div class="cta">
+          <a class="btn primary" href="#projects">View Projects</a>
+          <a class="btn ghost" href="#contact">Contact Me</a>
+        </div>
+      </div>
+      <div class="hero-bg" aria-hidden="true"></div>
+    </section>
   </header>
 
-  <!-- Main -->
   <main>
-    <!-- Hero -->
-    <section id="home" class="hero container reveal">
-      <div class="hero-content">
-        <h1>
-          <span class="eyebrow">Quality Assurance Engineer</span>
-          Vishal <span class="accent">Wamanrao</span> Patre
-        </h1>
-        <p class="lead">
-          6+ years in QA — Accessibility (WCAG), Performance (JMeter/LoadRunner),
-          Automation (Selenium/Python), API testing, CI/CD integration.
-        </p>
-        <div class="cta">
-          #contactHire Me</a>
-          assets/Vishal_Patre_QA_Resume.pdfDownload PDF</a>
-          https://github.com/GitHub</a>
-        </div>
-        <div class="contacts">
-          <ailto:vishpatre57@zohomail.in📧 vishpatre57@zohomail.in</a>
-          <span>📱 +91-7972197816</span>
-          <span>📍 Pune, India</span>
-        </div>
-      </div>
-
-      <aside class="hero-card glass" aria-label="Key Highlights">
-        <ul class="highlights">
-          <li>ADA Accessibility (WCAG)</li>
-          <li>Load & Performance (JMeter, LoadRunner)</li>
-          <li>Automation (Selenium, Python)</li>
-          <li>API Testing (Postman, REST Assured)</li>
-          <li>CI/CD (Jenkins, Git)</li>
-        </ul>
-      </aside>
-    </section>
-
-    <!-- About -->
-    <section id="about" class="section container reveal">
-      <h2 class="section-title">About</h2>
+    <section class="card about" id="about">
+      <h2>About</h2>
       <p>
-        Quality Assurance Engineer with 6+ years of experience in software testing, ADA compliance testing,
-        load/performance testing, and automation within the financial services domain. Skilled in manual and automated
-        testing, API validation, and CI/CD integration. Holds an MBA in Artificial Intelligence & Machine Learning from DY
-        Patil University, enabling data-driven testing and process optimization.
+        I’m a QA Engineer with 6+ years of experience across ADA accessibility, load & performance testing,
+        and automation in financial services. I combine hands-on testing with data-driven insights and CI/CD practices.
+        I hold an MBA in AI & ML from DY Patil University.
       </p>
-    </section>
-
-    <!-- Skills -->
-    <section id="skills" class="section container reveal">
-      <h2 class="section-title">Core Competencies</h2>
-      <div class="chips">
-        <span class="chip">Selenium</span>
-        <span class="chip">Python</span>
-        <span class="chip">WCAG</span>
-        <span class="chip">JMeter</span>
-        <span class="chip">LoadRunner</span>
-        <span class="chip">Postman</span>
-        <span class="chip">REST Assured</span>
-        <span class="chip">MS SQL</span>
-        <span class="chip">Azure DevOps (ADO)</span>
-        <span class="chip">Jira</span>
-        <span class="chip">Agile/Scrum</span>
-        <span class="chip">Jenkins</span>
-        <span class="chip">Git / GitHub / Bitbucket</span>
-        <span class="chip">Data Analysis</span>
-        <span class="chip">Machine Learning (Basics)</span>
-      </div>
-    </section>
-
-    <!-- Experience -->
-    <section id="experience" class="section container reveal">
-      <h2 class="section-title">Professional Experience</h2>
-
-      <article class="card">
-        <header>
-          <h3>Engineer — TransUnion</h3>
-          <span>Pune, India · Mar 2023 – Present</span>
-        </header>
-        <ul class="list">
-          <li>Developed and executed manual and automated test cases for web and API applications ensuring compliance.</li>
-          <li>Performed ADA accessibility testing using WCAG guidelines for web applications.</li>
-          <li>Conducted load & performance testing using JMeter.</li>
-          <li>Collaborated in Agile/Scrum to resolve issues early.</li>
-          <li>Managed defects using Azure DevOps (ADO) and Jira.</li>
-          <li>Integrated automated tests into CI/CD using Jenkins.</li>
-          <li>Used Python scripts for data validation and analysis.</li>
-        </ul>
-      </article>
-
-      <article class="card">
-        <header>
-          <h3>Software Test Engineer — TCS</h3>
-          <span>Pune, India · Nov 2015 – Aug 2022</span>
-        </header>
-        <ul class="list">
-          <li>Designed and executed functional and regression test cases for enterprise applications.</li>
-          <li>Automated scenarios using Selenium WebDriver.</li>
-          <li>API testing and data validation with MS SQL.</li>
-          <li>LoadRunner performance testing on critical modules.</li>
-          <li>Participated in Agile ceremonies.</li>
-        </ul>
-      </article>
-    </section>
-
-    <!-- Projects -->
-    <section id="projects" class="section container reveal">
-      <h2 class="section-title">Projects</h2>
-      <div class="cards grid">
-        <article class="card">
-          <h3>Accessibility Compliance Testing</h3>
-          <p>Ensured ADA/WCAG compliance for web applications.</p>
-        </article>
-        <article class="card">
-          <h3>Automation Framework (Selenium + Pytest)</h3>
-          <p>Built a scalable framework integrated with Jenkins for continuous testing.</p>
-        </article>
-        <article class="card">
-          <h3>Load Testing Suite</h3>
-          <p>Designed JMeter scripts for performance benchmarking.</p>
-        </article>
-        <article class="card">
-          <h3>Python Data Analysis</h3>
-          <p>Created scripts for log analysis and test data validation.</p>
-        </article>
-        <article class="card">
-          <h3>Basic ML Experimentation</h3>
-          <p>Applied simple ML models for defect prediction during MBA coursework.</p>
-        </article>
-        <article class="card">
-          <h3>Tata Group Data Analytics Job Simulation (Forage)</h3>
-          <p>AI-powered data analytics & strategy for Financial Services, Dec 2025.</p>
-        </article>
-      </div>
-    </section>
-
-    <!-- Education -->
-    <section id="education" class="section container reveal">
-      <h2 class="section-title">Education</h2>
-      <div class="cards">
-        <article class="card">
-          <h3>MBA in Artificial Intelligence & Machine Learning</h3>
-          <p>DY Patil University — 2025</p>
-        </article>
-        <article class="card">
-          <h3>Bachelor of Agriculture in Agri Business Management</h3>
-          <p>MAU, Parabhani — 2012</p>
-        </article>
-      </div>
-    </section>
-
-    <!-- Certifications -->
-    <section id="certifications" class="section container reveal">
-      <h2 class="section-title">Certifications</h2>
-      <ul class="chips">
-        <li class="chip">ISTQB Certified Tester</li>
+      <ul class="quick-info">
+        <li>📍 Pune, India</li>
+        <li>🎓 MBA (AI & ML), DY Patil University (2025)</li>
+        <li>✉️ <a href="mailto:vishpatre57@zohomail.in">vishpatre57@zohomail.in</a></li>
+        <li>📞 +91-7972197816</li>
       </ul>
     </section>
 
-    <!-- Contact -->
-    <section id="contact" class="section container reveal">
-      <h2 class="section-title">Let's Connect</h2>
-      mailto:vishpatre57@zohomail.in
-        <div class="grid form-grid">
-          <label>
-            <span>Name</span>
-            <input type="text" name="name" placeholder="Your name" required>
-          </label>
-          <label>
-            <span>Email</span>
-            <input type="email" name="email" placeholder="Your email" required>
-          </label>
-          <label class="full">
-            <span>Message</span>
-            <textarea name="message" rows="5" placeholder="How can I help?" required></textarea>
-          </label>
+    <section class="card" id="skills">
+      <h2>Core Competencies</h2>
+      <div class="skills-grid">
+        <div class="skill">Selenium · Pytest · Automation</div>
+        <div class="skill">ADA/WCAG Accessibility</div>
+        <div class="skill">JMeter · LoadRunner</div>
+        <div class="skill">API Testing · Postman · REST Assured</div>
+        <div class="skill">SQL · MS SQL</div>
+        <div class="skill">Azure DevOps (ADO) · Jira</div>
+        <div class="skill">CI/CD · Jenkins · Git</div>
+        <div class="skill">Python · Data Analysis</div>
+        <div class="skill">Agile/Scrum</div>
+      </div>
+    </section>
+
+    <section class="card" id="experience">
+      <h2>Experience</h2>
+      <article class="exp">
+        <header>
+          <h3>Engineer — TransUnion <span class="tenure">Mar 2023 – Present</span></h3>
+          <p>Pune, India</p>
+        </header>
+        <ul>
+          <li>Designed and executed manual & automated tests for web & API applications.</li>
+          <li>Performed ADA testing using WCAG guidelines; improved accessibility compliance.</li>
+          <li>Conducted performance testing (JMeter) to validate scalability & reliability.</li>
+          <li>Integrated automated suites into Jenkins pipelines; accelerated releases.</li>
+          <li>Used Python for data validation & analysis to expand test coverage.</li>
+        </ul>
+      </article>
+      <article class="exp">
+        <header>
+          <h3>Software Test Engineer — TCS <span class="tenure">Nov 2015 – Aug 2022</span></h3>
+          <p>Pune, India</p>
+        </header>
+        <ul>
+          <li>Built functional & regression test suites for enterprise apps.</li>
+          <li>Automated scenarios with Selenium WebDriver to boost coverage.</li>
+          <li>Performed API testing and validated data via MS SQL.</li>
+          <li>Executed LoadRunner performance tests for critical modules.</li>
+        </ul>
+      </article>
+    </section>
+
+    <section class="card" id="projects">
+      <h2>Featured Projects</h2>
+      <div class="projects-grid">
+        <article class="project">
+          <h3>Accessibility Compliance Testing</h3>
+          <p>Ensured WCAG/ADA compliance for web apps; created audit reports & remediation plans.</p>
+          <ul class="tags"><li>WCAG</li><li>AXE</li><li>Automation</li></ul>
+        </article>
+        <article class="project">
+          <h3>Automation Framework (Selenium + Pytest)</h3>
+          <p>Built a scalable framework integrated with Jenkins for continuous testing.</p>
+          <ul class="tags"><li>Selenium</li><li>Pytest</li><li>CI/CD</li></ul>
+        </article>
+        <article class="project">
+          <h3>Load Testing Suite</h3>
+          <p>Designed JMeter scripts for performance benchmarking and reliability testing.</p>
+          <ul class="tags"><li>JMeter</li><li>Performance</li><li>DevOps</li></ul>
+        </article>
+        <article class="project">
+          <h3>Python Data Analysis</h3>
+          <p>Created scripts for log analysis & test data validation to inform QA decisions.</p>
+          <ul class="tags"><li>Python</li><li>Pandas</li><li>EDA</li></ul>
+        </article>
+      </div>
+    </section>
+
+    <section class="card" id="education">
+      <h2>Education & Certifications</h2>
+      <ul class="edu">
+        <li>MBA in AI & ML — DY Patil University (2025)</li>
+        <li>Bachelor of Agriculture (Agri Business Mgmt) — MAU, Parabhani (2012)</li>
+        <li>ISTQB Certified Tester</li>
+        <li>Tata Group Data Analytics Job Simulation (Forage) — Dec 2025</li>
+      </ul>
+    </section>
+
+    <section class="card contact" id="contact">
+      <h2>Contact</h2>
+      <form class="contact-form" action="#" method="post" aria-label="Contact form">
+        <div class="row">
+          <label for="name">Name</label>
+          <input id="name" name="name" type="text" placeholder="Your name" required />
         </div>
-        <button class="btn primary" type="submit">Send Email</button>
+        <div class="row">
+          <label for="email">Email</label>
+          <input id="email" name="email" type="email" placeholder="you@example.com" required />
+        </div>
+        <div class="row">
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="5" placeholder="Tell me about your project…" required></textarea>
+        </div>
+        <button class="btn primary" type="submit">Send</button>
+        <p class="form-note">This demo form doesn’t submit—hook it to your backend or an email service.</p>
       </form>
     </section>
   </main>
 
-  <footer class="site-footer container">
-    <p>© <span id="year"></span> Vishal Wamanrao Patre. All rights reserved.</p>
+  <footer class="site-footer">
+    <p>© <span id="year"></span> Vishal Wamanrao Patre · Pune, India</p>
+    <div class="social">
+      <a href="https://github.com/" target="_blank" rel="noopener" aria-label="GitHub">GitHub</a>
+      <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="LinkedIn">LinkedIn</a>
+    </div>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
